--- a/.github/workflows/rustfmt_check.yml
+++ b/.github/workflows/rustfmt_check.yml
@@ -8,6 +8,11 @@ jobs:
       - name: Check out branch source
         uses: actions/checkout@v4
 
+      - name: Make a new crate
+        run: |
+          cargo new autofmt_demo
+          head -n 1000 Cargo.toml src/main.rs
+        
       - name: Install rustfmt from nightly toolchain
         run: |
           rustup toolchain install nightly
