--- a/.github/workflows/rustfmt_check.yml
+++ b/.github/workflows/rustfmt_check.yml
@@ -11,11 +11,9 @@ jobs:
       - name: Install rustfmt from nightly toolchain
         run: |
           rustup toolchain install nightly
-          rustup default nightly
-          rustup component add rustfmt
-          rustfmt --version
+          rustup component add rustfmt --toolchain nightly
 
-      - name: Run cargo fmt -- --check
-        run: cargo fmt -- --check
+      - name: Run cargo +nightly fmt --check
+        run: cargo +nightly fmt --check
 
       - run: echo "status = ${{ job.status }}"
