--- a/.github/workflows/trailing_whitespace_check.yml
+++ b/.github/workflows/trailing_whitespace_check.yml
@@ -10,6 +10,4 @@ jobs:
       - name: Check .rs files for trailing whitespace
         run: >
           find . -name '*.rs' -print0 |
-          xargs -0 grep -c '[ \t]$' |
-          grep -v ':0$' |
-          perl -e 'while(<>){print;$n+=1};exit ($n>0)?0:1;'
+          xargs -0 grep -c '[ \t]$'
