--- a/.github/workflows/trailing_whitespace_check.yml
+++ b/.github/workflows/trailing_whitespace_check.yml
@@ -9,4 +9,4 @@ jobs:
 
       - name: Check .rs files for trailing whitespace
         run: >
-          find . -name '*.rs'
+          find . -name '*.rs' -print0 | xargs grep -c '[ \t]$'
