--- a/.github/workflows/trailing_whitespace_check.yml
+++ b/.github/workflows/trailing_whitespace_check.yml
@@ -10,3 +10,4 @@ jobs:
       - name: Check .rs files for trailing whitespace
         run: >
           find . -name '*.rs' -print0 | xargs -0 grep -c '[ \t]$'
+          | perl -e 'while(<>){print;$n+=1};if($n){exit 1}else{print "PASS\n"}'
