--- a/.github/workflows/trailing_whitespace_check.yml
+++ b/.github/workflows/trailing_whitespace_check.yml
@@ -11,4 +11,4 @@ jobs:
         run: >
           find . -name '*.rs' -print0 | xargs -0 grep -c '[ \t]$'
           | grep -v ':0$'
-          | perl -e 'while(<>){print;$n+=1};print "PASS $n\n";'
+          | perl -e 'while(<>){print;$n+=1};if($n>0){exit 1;};print "PASS\n";'
