--- a/.github/workflows/trailing_whitespace_check.yml
+++ b/.github/workflows/trailing_whitespace_check.yml
@@ -10,4 +10,5 @@ jobs:
       - name: Check .rs files for trailing whitespace
         run: >
           find . -name '*.rs' -print0 | xargs -0 grep -c '[ \t]$'
-          | grep -v ':0$'
+          | grep -v ':0$\|^0$'
+          | perl -e 'while(<>){print;$n+=1};if($n>0){exit 1;};print "PASS\n";'
