--- a/.github/workflows/trailing_whitespace_check.yml
+++ b/.github/workflows/trailing_whitespace_check.yml
@@ -9,6 +9,7 @@ jobs:
 
       - name: Check .rs files for trailing whitespace
         run: >
-          find . -name '*.rs' -print0 | xargs -0 grep -c '[ \t]$'
-          | grep -v ':0$\|^0$'
+          find . -name '*.rs' -print0
+          | xargs -0 grep -c --with-filename '[ \t]$'
+          | grep -v ':0$'
           | perl -e 'while(<>){print;$n+=1};if($n>0){exit 1;};print "PASS\n";'
